--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
-
-  <!-- <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleGapiLoad()"
-    onreadystatechange="if (this.readyState === 'complete') this.onload()">
-    </script> -->
+  <title>Platform</title>
 </head>
 
 <body>
